fix the key and certificate loading + fix size of certificate